--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "@reduxjs/toolkit": "1.5.0",
+    "@stripe/stripe-js": "^1.15.0",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "axios": "^0.21.1",
     "firebase": "^8.6.2",
     "firebase-admin": "^9.8.0",
+    "install": "^0.13.0",
+    "micro": "^9.3.4",
     "next": "latest",
     "next-auth": "^3.23.2",
     "react": "17.0.1",
@@ -19,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
     "react-responsive-carousel": "^3.2.18",
+    "stripe": "^8.149.0",
     "yarn": "^1.22.10"
   },
   "license": "MIT",
